--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -134,14 +134,14 @@
     <header>
         <a href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;" matTooltip="Return to home"
                 matTooltipPosition="right"></a>
-        <h1><span>P</span><span>R</span><span>O</span><span>J</span><span>E</span><span>C</span><span>T</span><span>S</span></h1>
+        <h1><span>P</span><span>R</span><span>O</span><span>J</span><span>E</span><span>C</span><span>T</span><span>S</span>
+        </h1>
     </header>
     <section class="pro-card lmw">
-        <a href="">
-            <div class="overlay">
-                <p>Lustys Minecraft World</p>
-            </div>
-        </a>
+        <div class="overlay">
+            <p>Lustys Minecraft World</p>
+            <img src="../../assets/1x/lmw.png" alt="">
+        </div>
     </section>
     <section class="pro-card smp">
         <a href="">
