--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  font-family: Spartan, "Helvetica Neue", sans-serif;
+  font-family: Catamaran, "Helvetica Neue", sans-serif;
   // overflow: hidden;
 }
 
