--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,21 +10,21 @@
     </header>
 
     <section class="pro-card">
-        <a href="">
+        <a href="https://rolexlusty.netlify.app" target="_blank">
             <img src="../../assets/1x/lmw.png" alt="">
             <div class="over"></div>
             <p>Lustys Minecraft World</p>
         </a>
     </section>
     <section class="pro-card">
-        <a href="">
+        <a href="https://smplive.netlify.app" target="_blank">
             <img src="../../assets/1x/smplive.png" alt="">
             <div class="over"></div>
             <p>SMPLive</p>
         </a>
     </section>
     <section class="pro-card isyms">
-        <a href="">
+        <a href="https://isyms.tech" target="_blank">
             <img src="../../assets/1x/isyms.png" alt="">
             <div class="over"></div>
             <p>ISyMS</p>
