--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,8 +1,15 @@
 <body>
     <header>
-        <a href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;" matTooltip="Return to home"
-                matTooltipPosition="right"></a>
-        <div></div>
+        <a class="logo_home" href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;"
+                matTooltip="Return to home" matTooltipPosition="right"></a>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="projects">Projects</a></li>
+                </ul>
+            </nav>
+        </div>
         <img class="header_img" src="../../assets/mateo-vrbs-nCU4yq5xDEQ-unsplash.jpeg" alt="">
         <div class="logo">
             <img src="../../favicon.ico" alt="">
