--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,10 +1,17 @@
 <body>
     <header>
-        <a href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;" matTooltip="Return to home"
+        <a class="logo" href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;" matTooltip="Return to home"
                 matTooltipPosition="right"></a>
         <h1>PROJECTS</h1>
         <div class="header_image">
-            <div></div>
+            <div>
+            </div>
+            <nav>
+                <ul>
+                    <li style="color: white;"><a href="">Home</a></li>
+                    <li style="color: white;"><a href="about">About Me</a></li>
+                </ul>
+            </nav>
             <img src="../../assets/safar-safarov-koOdUvfGr4c-unsplash.jpeg" alt="header image">
         </div>
     </header>
@@ -25,7 +32,7 @@
     </section>
     <section class="pro-card isyms">
         <a href="https://isyms.tech" target="_blank">
-            <img src="../../assets/1x/isyms.png" alt="">
+            <img src="../../assets/isyms.png" alt="">
             <div class="over"></div>
             <p>ISyMS</p>
         </a>
