--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -185,16 +185,22 @@ header {
     div {
         position: absolute;
         width: 100%;
-        height: 51%;
+        height: 50%;
         // backdrop-filter: blur(2px);
         background: rgba($color: #0c080f, $alpha: 0.3);
-        .navi {
-            ul {
-                display: flex;
-                flex-direction: row;
-                li {
-                    display: block;
-                    color: white;
+        nav {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            ul{
+                li{
+                    font-size: 28px;
+                    display: inline;
+                    a{
+                        color: #3c819e;
+                        text-decoration: none;
+
+                    }
                 }
             }
         }
@@ -205,7 +211,7 @@ header {
         object-fit: cover;
         object-position: 0% 50%;
     }
-    a {
+    .logo_home {
         position: absolute;
         z-index: 99;
     }
